@@ -10,7 +10,7 @@ Features:
   - Enhanced program guide
   - TV show and movie fanart downloaded from tvdb, tmdb, imdb, and google image search
   - View MythTV stats (tuners, jobs, loadavg, etc)
-  - Compatible with MythTV 0.21 and 0.22
+  - Compatible with MythTV 0.22 and 0.23
   - Add your own Twitter feeds
 
 Requirements
